5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1723_2505.log
== TEST (2019-05-14 10:17:12) 
-- CODE:
from math import*
a = radians(eval(input("x:")))
k = int(input("series: "))

i = 0
fim = k - 1
soma = 0
while(i <= fim):
	soma = soma + (((-1)**i)*((ax**)2*i+1))/factorial((2*i+1))
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 9
    soma = soma + (((-1)**i)*((ax**)2*i+1))/factorial((2*i+1))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:27:03) 
-- CODE:
from math import*
a = radians(eval(input("x:")))
k = int(input("series: "))

i = 0
fim = k - 1
soma = 0
while(i <= fim):
	soma = soma + (((-1)**i)*((a**)2*i+1))/factorial((2*i+1))
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 9
    soma = soma + (((-1)**i)*((a**)2*i+1))/factorial((2*i+1))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:30:25) 
-- CODE:
from math import*
a = radians(eval(input("x:")))
k = int(input("series: "))

i = 0
fim = k - 1
soma = 0
while(i <= fim):
	soma = soma + (-1) ** i *((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:31:19) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

i = 0
fim = k - 1
soma = 0
while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:06) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1

print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:20) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1

print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:22) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1

print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:22) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1

print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:22) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1)))
	i = i + 1

print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:35) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1))))
	i = i + 1

print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:32:49) 
-- CODE:
from math import*
a = eval(input("x:"))
k = int(input("series: "))

soma=0
i = 0
fim = k - 1

while(i <= fim):
	soma = soma + (-1) ** i * ((a**(2*i+1)/factorial((2*i+1))))
	i = i + 1

print(round(soma, 10))
-- EXECUTION TIME:
0.143916
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
